responsive horizontal scroll fix and hightlihgt active link

--- a/src/components/sideMenu/sideMenu.scss
+++ b/src/components/sideMenu/sideMenu.scss
@@ -8,7 +8,7 @@
 
     &.show {
         left: 0;
-        width: 91%;
+        width: 100%;
 
         .menu-icon {
             display: none;
@@ -115,4 +115,8 @@
             }
         }
     }
+}
+
+.active {
+    color: lightcoral;
 }
